--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ Encoding: UTF-8
 Depends: R (>= 4.0.0)
 LinkingTo: Rcpp
 Imports:
+    Rcpp (>= 1.0.0),
     sf (>= 1.0.0),
     terra (>= 1.6.0),
     exactextractr (>= 0.8.0)
